Attempt to fix apple phone overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -228,7 +228,7 @@ a.darkPeachButton:hover {
 /* Smartphone */
 @media screen and (max-width: 768px) {
     .lock-scroll {
-        overflow: hidden;
+        overflow-y: hidden;
     }
 }
 
